# Quad-runtime

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
config/: quad_engine_v2_2.yaml
docs/: ARCHITECTURE.md  HANDOVER.md  INTEGRATION.md  PRODUCTION_REMEDIATION_PLAN.md
quad/: __init__.py  audit_logger.py  cli.py  config_loader.py  errors.py  failure_checks.py  llm_client.py  models.py  prompt_builder.py  router.py  runtime.py  scorer.py  tool_grounding.py
tests/: test_audit_safety.py  test_cli.py  test_config_loader.py  test_error_handling.py  test_failure_checks.py  test_provider_clients.py  test_provider_health.py  test_router.py  test_runtime.py  test_scorer.py
